# cmd/api/main.go
@@ -23,6 +23,7 @@ import (
 	"github.com/Namularbre/knowledgeKeeperApi/internal/infra/db"
 	httpserver "github.com/Namularbre/knowledgeKeeperApi/internal/infra/http"
 	rolesapp "github.com/Namularbre/knowledgeKeeperApi/internal/roles/app"
+	rolesdomain "github.com/Namularbre/knowledgeKeeperApi/internal/roles/domain"
 	rolesinfra "github.com/Namularbre/knowledgeKeeperApi/internal/roles/infra"
 	roleshttp "github.com/Namularbre/knowledgeKeeperApi/internal/roles/infra/http"
 	rolesql "github.com/Namularbre/knowledgeKeeperApi/internal/roles/infra/sql"
@@ -163,11 +164,11 @@ func main() {
 		mux.Handle("/auth/refresh", httpserver.LogMiddleware(authHandlers.Refresh))
 		mux.Handle("/auth/me", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, authHandlers.Me)))
 
-		mux.Handle("/roles/create", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, authhttp.RequireAnyRole(roles, "admin")(rolesHandlers.CreateRole))))
+		mux.Handle("/roles/create", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, authhttp.RequireAnyRole(roles, rolesdomain.RoleAdmin)(rolesHandlers.CreateRole))))
 		mux.Handle("/roles/findbyid", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, rolesHandlers.FindByID)))
 		mux.Handle("/roles/finduserroles", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, rolesHandlers.FindByUserID)))
-		mux.Handle("/roles/adduserrole", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, authhttp.RequireAnyRole(roles, "admin")(rolesHandlers.AddUserRole))))
-		mux.Handle("/roles/removeuserrole", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, authhttp.RequireAnyRole(roles, "admin")(rolesHandlers.RemoveUserRole))))
+		mux.Handle("/roles/adduserrole", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, authhttp.RequireAnyRole(roles, rolesdomain.RoleAdmin)(rolesHandlers.AddUserRole))))
+		mux.Handle("/roles/removeuserrole", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, authhttp.RequireAnyRole(roles, rolesdomain.RoleAdmin)(rolesHandlers.RemoveUserRole))))
 		mux.Handle("/roles/searchbylabel", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, rolesHandlers.SearchByLabel)))
 
 		mux.Handle("/subjects/create", httpserver.LogMiddleware(authhttp.RequireBearer(issuer, subjectsHandlers.CreateSubject)))
